dnl Process this file with autoconf to produce a configure script.
AC_INIT(tcptrace.c)

AC_CANONICAL_SYSTEM

AC_LBL_C_INIT(V_CCOPT, V_INCLS)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)

dnl See if "unsigned long long int" works
AC_CHECK_SIZEOF(unsigned long long int)


dnl include additional checking if developing
AC_LBL_DEVEL(V_CCOPT)


dnl check for needed network libraries
AC_LBL_LIBRARY_NET()

dnl use fpurge if available, otherwise fflush
AC_CHECK_FUNCS(fpurge)

dnl use mkstemp if available, otherwise tempnam
AC_CHECK_FUNCS(mkstemp)

dnl use valloc if available, then memalign, then malloc
AC_CHECK_FUNCS(valloc memalign)

dnl check for the IPv6 routines inet_pton
AC_CHECK_FUNCS(inet_pton)



dnl Grab standard includes under weird Linux versions
case "$target_os" in
  *inux*)	V_INCLS="$V_INCLS -Ilinux-include";;
esac



AC_SUBST(V_CCOPT)
AC_SUBST(V_INCLS)
AC_SUBST(V_DEFINES)


AC_OUTPUT(Makefile)
